Switch to a JUnit version of the TCK